syntax = "proto3";

package authorization;

option go_package = ".;pb";

message AuthorizationReprocessPendingRequest {
  string client_id = 1;
  string transaction_id = 2;
  float value = 3;
}

message AuthorizationReprocessPendingResponse {
  string authorization_id = 1;
  string client_id = 2;
  string transaction_id = 3;
  string status = 4;
  float value = 5;
  string error_message = 6;
}
